Fix large spacing above labels on results filters

--- a/src/sass/_results.scss
+++ b/src/sass/_results.scss
@@ -139,6 +139,10 @@
   padding: 15px 10px;
   width: 20%;
 
+  label {
+    margin-top: 1rem;
+  }
+
   .reset-filters {
     border-bottom: solid 1px;
     cursor: pointer;
